# conways_game_of_life

./: CMakeLists.txt  README.md
cmake_modules/: GoogleTest.cmake  GoogleTestDownload.cmake.in
src/: CMakeLists.txt  cell.cpp  cell.h  coordinates.h  destiny.cpp  destiny.h  grid.cpp  grid.h  grid_observer.h  grid_presenter.cpp  grid_presenter.h  position.h
src/main/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  core_tests.cpp
